--- a/public/style/components/_header.scss
+++ b/public/style/components/_header.scss
@@ -1,21 +1,168 @@
-.header{
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    &_text{
-        h1{
-            width: 100px;
-            font-size: 60px;
-            line-height: 60px;
-            font-family:'Cinzel', serif;
-            span{
-                font-size: 85px;
+header{
+    background-image: url(../../images/background/header_back_img.svg);
+    background-size: cover;
+    height: 100vh;
+    .header{
+        display: flex;
+        align-items: flex-end;
+        justify-content: space-around;
+        height: 75vh;
+        &_text-btn{
+            width: 500px;
+            color: var(--white);
+            margin-bottom: 20px;
+            h1{
+                width: 100px;
+                font-size: 60px;
+                line-height: 60px;
+                font-family:'Cinzel', serif;
+                margin-bottom: -10px;
+                span{
+                    font-size: 85px;
+                }
+            }
+            p{
+                font-size: 15px;
+                font-family: Arial, Helvetica, sans-serif;
+                margin-bottom: 20px;
+                width: 400px;
+            }
+            .btn{
+                background: transparent;
+                border: 1px solid var(--white);
+                display: inline-block;
+                width: 150px;
+                height: 40px;
+                color: var(--white);
+                overflow: hidden;
+                position: relative;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                font-family: Arial, Helvetica, sans-serif;
+                span{
+                    z-index: 1;
+                    position: absolute;
+                    display: block;
+                    transition: 0.6s;
+                }
+                .hover{
+                    position: absolute;
+                    background: var(--white);
+                    height: 110%;
+                    width: 0;
+                    top: -2px;
+                    left: -20px;
+                    display: block;
+                    transform: skew(30deg);
+                    z-index: 0;
+                    filter: blur(0.5px);
+                    transition: 0.6s;
+                }
+                &-hover{
+                    .hover{
+                        width: 130%;
+                    }
+                    span{
+                        color: var(--purple);
+                    }
+                }
+            }
+            @media screen and (max-width: 768px) {
+                width: 300px;
+                h1{
+                    width: 100px;
+                    font-size: 40px;
+                    line-height: 40px;
+                    font-family:'Cinzel', serif;
+                    margin-bottom: -10px;
+                    span{
+                        font-size: 60px;
+                    }
+                }
+                p{
+                    width: 300px;
+                }
+            }
+        }
+        &_img{
+            background-color: var(--white);
+            height: 100%;
+            display: flex;
+            align-items: flex-end;
+            padding: 25px;
+            border-radius: 0 0 150px 150px;
+            overflow: hidden;
+            opacity: 0;
+            animation: img-height 1s 0.5s forwards;
+            .img{
+                width: 270px;
+                height: 270px;
+                border-radius: 50%;
+                overflow: hidden;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                img{
+                    width: 1000px;
+                }
+            }
+
+            @media screen and (max-width: 768px){
+                img{
+                    width: 200px;
+                }
+            }
+            @keyframes img-height {
+                0%{
+                    opacity: 0;
+                }
+                100%{
+                    opacity: 1;
+                }
             }
         }
     }
-    &_img{
-        img{
-            width: 400px;
+    @media screen and (max-width: 550px) {
+        .header{
+            height: 100vh;
+            flex-direction: column;
+            align-items: flex-start;
+            &_text-btn{
+                width: 200px;
+                text-align: center;
+                margin: 0 auto 20px;
+                h1{
+                    width: 100px;
+                    font-size: 30px;
+                    line-height: 30px;
+                    margin-bottom: -10px;
+                    span{
+                        font-size: 100px;
+                    }
+                }
+                p{
+                    display: none;
+                }
+                a{
+                    position: absolute;
+                    width: 100%;
+                    left: 0;
+                    bottom: 50px;
+                    .btn{
+                        width: 100%;
+                        background: var(--white);
+                        color: var(--purple);
+                    }
+                }
+            }
+            &_img{
+                background-color: transparent;
+                height: auto;
+                img{
+                    width: 320px;
+                }
+            }           
         }
     }
 }
