--- a/public/style/components/_normalize.scss
+++ b/public/style/components/_normalize.scss
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@500;600;700&display=swap');
 
+:root{
+    --white: #fff;
+    --purple: #4e00ca;
+}
+
 body{
     margin: 0;
     padding: 0;
@@ -12,6 +17,7 @@ body{
 
 .container{
     width: 90%;
-    max-width: 1200px;
+    max-width: 1440px;
     margin: 0 auto;
+    position: relative;
 }
