--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,4 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Cinzel:wght@500;600;700&display=swap");
+:root {
+  --white: #fff;
+  --purple: #4e00ca;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -11,34 +16,322 @@ body {
 
 .container {
   width: 90%;
-  max-width: 1200px;
+  max-width: 1440px;
   margin: 0 auto;
+  position: relative;
 }
 
-.header {
+header {
+  background-image: url(../../images/background/header_back_img.svg);
+  background-size: cover;
+  height: 100vh;
+}
+
+header .header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  height: 75vh;
+}
+
+header .header_text-btn {
+  width: 500px;
+  color: var(--white);
+  margin-bottom: 20px;
+}
+
+header .header_text-btn h1 {
+  width: 100px;
+  font-size: 60px;
+  line-height: 60px;
+  font-family: 'Cinzel', serif;
+  margin-bottom: -10px;
+}
+
+header .header_text-btn h1 span {
+  font-size: 85px;
+}
+
+header .header_text-btn p {
+  font-size: 15px;
+  font-family: Arial, Helvetica, sans-serif;
+  margin-bottom: 20px;
+  width: 400px;
+}
+
+header .header_text-btn .btn {
+  background: transparent;
+  border: 1px solid var(--white);
+  display: inline-block;
+  width: 150px;
+  height: 40px;
+  color: var(--white);
+  overflow: hidden;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+header .header_text-btn .btn span {
+  z-index: 1;
+  position: absolute;
+  display: block;
+  -webkit-transition: 0.6s;
+  transition: 0.6s;
+}
+
+header .header_text-btn .btn .hover {
+  position: absolute;
+  background: var(--white);
+  height: 110%;
+  width: 0;
+  top: -2px;
+  left: -20px;
+  display: block;
+  -webkit-transform: skew(30deg);
+          transform: skew(30deg);
+  z-index: 0;
+  -webkit-filter: blur(0.5px);
+          filter: blur(0.5px);
+  -webkit-transition: 0.6s;
+  transition: 0.6s;
+}
+
+header .header_text-btn .btn-hover .hover {
+  width: 130%;
+}
+
+header .header_text-btn .btn-hover span {
+  color: var(--purple);
+}
+
+@media screen and (max-width: 768px) {
+  header .header_text-btn {
+    width: 300px;
+  }
+  header .header_text-btn h1 {
+    width: 100px;
+    font-size: 40px;
+    line-height: 40px;
+    font-family: 'Cinzel', serif;
+    margin-bottom: -10px;
+  }
+  header .header_text-btn h1 span {
+    font-size: 60px;
+  }
+  header .header_text-btn p {
+    width: 300px;
+  }
+}
+
+header .header_img {
+  background-color: var(--white);
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  padding: 25px;
+  border-radius: 0 0 150px 150px;
+  overflow: hidden;
+  opacity: 0;
+  -webkit-animation: img-height 1s 0.5s forwards;
+          animation: img-height 1s 0.5s forwards;
+}
+
+header .header_img .img {
+  width: 270px;
+  height: 270px;
+  border-radius: 50%;
+  overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+header .header_img .img img {
+  width: 1000px;
+}
+
+@media screen and (max-width: 768px) {
+  header .header_img img {
+    width: 200px;
+  }
+}
+
+@-webkit-keyframes img-height {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes img-height {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  header .header {
+    height: 100vh;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+  header .header_text-btn {
+    width: 200px;
+    text-align: center;
+    margin: 0 auto 20px;
+  }
+  header .header_text-btn h1 {
+    width: 100px;
+    font-size: 30px;
+    line-height: 30px;
+    margin-bottom: -10px;
+  }
+  header .header_text-btn h1 span {
+    font-size: 100px;
+  }
+  header .header_text-btn p {
+    display: none;
+  }
+  header .header_text-btn a {
+    position: absolute;
+    width: 100%;
+    left: 0;
+    bottom: 50px;
+  }
+  header .header_text-btn a .btn {
+    width: 100%;
+    background: var(--white);
+    color: var(--purple);
+  }
+  header .header_img {
+    background-color: transparent;
+    height: auto;
+  }
+  header .header_img img {
+    width: 320px;
+  }
+}
+
+.menu {
+  background: var(--white);
+  position: fixed;
+  width: 100%;
+  padding: 10px 0;
+  z-index: 20;
+  overflow: hidden;
+  font-family: Arial, Helvetica, sans-serif;
+  opacity: 0;
+  -webkit-animation: menu-open 1s 0s forwards;
+          animation: menu-open 1s 0s forwards;
+}
+
+.menu .container {
+  width: 83%;
+}
+
+.menu .container ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 1000px;
+}
+
+.menu .container ul li {
+  list-style: none;
+  margin-right: 40px;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.menu .container ul li a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  text-decoration: none;
+  font-weight: 600;
+  color: #000;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
 }
 
-.header_text h1 {
-  width: 100px;
-  font-size: 60px;
-  line-height: 60px;
-  font-family: 'Cinzel', serif;
+.menu .container ul li a img {
+  width: 25px;
+  margin-right: 7px;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
 }
 
-.header_text h1 span {
-  font-size: 85px;
+.menu .container ul li a:hover {
+  color: var(--purple);
+  letter-spacing: 1px;
 }
 
-.header_img img {
-  width: 400px;
+.menu .container ul li a:hover img {
+  -webkit-filter: invert(17%) sepia(96%) saturate(5190%) hue-rotate(264deg) brightness(72%) contrast(138%);
+          filter: invert(17%) sepia(96%) saturate(5190%) hue-rotate(264deg) brightness(72%) contrast(138%);
+}
+
+.menu .container ul li:hover a img {
+  -webkit-transform: rotate(360deg);
+          transform: rotate(360deg);
+}
+
+@-webkit-keyframes menu-open {
+  0% {
+    width: 0;
+    opacity: 0;
+  }
+  100% {
+    width: 100%;
+    opacity: 1;
+  }
+}
+
+@keyframes menu-open {
+  0% {
+    width: 0;
+    opacity: 0;
+  }
+  100% {
+    width: 100%;
+    opacity: 1;
+  }
 }
 /*# sourceMappingURL=style.css.map */
