--- a/public/style/components/_header.scss
+++ b/public/style/components/_header.scss
@@ -5,12 +5,16 @@ header{
     .header{
         display: flex;
         align-items: flex-end;
-        justify-content: space-around;
+        justify-content: space-between;
         height: 75vh;
+        @media screen and (min-width: 1440px) {
+            height: 60vh;
+        }
         &_text-btn{
             width: 500px;
             color: var(--white);
             margin-bottom: 20px;
+            animation: opacity-ani 1s 0s forwards;
             h1{
                 width: 100px;
                 font-size: 60px;
@@ -94,7 +98,7 @@ header{
             border-radius: 0 0 150px 150px;
             overflow: hidden;
             opacity: 0;
-            animation: img-height 1s 0.5s forwards;
+            animation: opacity-ani 1s 0.5s forwards;
             .img{
                 width: 270px;
                 height: 270px;
@@ -113,21 +117,14 @@ header{
                     width: 200px;
                 }
             }
-            @keyframes img-height {
-                0%{
-                    opacity: 0;
-                }
-                100%{
-                    opacity: 1;
-                }
-            }
         }
     }
     @media screen and (max-width: 550px) {
         .header{
             height: 100vh;
             flex-direction: column;
-            align-items: flex-start;
+            align-items: center;
+            height: 90vh;
             &_text-btn{
                 width: 200px;
                 text-align: center;
@@ -136,7 +133,8 @@ header{
                     width: 100px;
                     font-size: 30px;
                     line-height: 30px;
-                    margin-bottom: -10px;
+                    margin-top: -150px;
+                    animation: mob-title 1s 0.1s forwards;
                     span{
                         font-size: 100px;
                     }
@@ -146,9 +144,14 @@ header{
                 }
                 a{
                     position: absolute;
-                    width: 100%;
+                    width: 80%;
                     left: 0;
+                    right: 0;
+                    margin-left: auto;
+                    margin-right: auto;
                     bottom: 50px;
+                    opacity: 0;
+                    animation: opacity-ani 1s 0.7s forwards;
                     .btn{
                         width: 100%;
                         background: var(--white);
@@ -159,6 +162,7 @@ header{
             &_img{
                 background-color: transparent;
                 height: auto;
+                margin: 0 auto 90px;
                 img{
                     width: 320px;
                 }
