--- a/public/style/components/_menu.scss
+++ b/public/style/components/_menu.scss
@@ -73,7 +73,6 @@
     @media screen and (max-width: 550px) {
         position: fixed;
         width: 93%;
-        padding: 3px 0;
         border-radius: 5px;
         opacity: 1;
         animation: none;
@@ -83,7 +82,9 @@
         left: 0;
         margin-left: auto;
         margin-right: auto;
+        padding: 13px 0 0 0;
         animation: mob-menu-open 1s 0s forwards;
+        box-shadow: 0px 0px 23px -1px rgba(0,0,0,0.4);
         @keyframes mob-menu-open {
             0%{
                 bottom: -100px;
@@ -121,6 +122,7 @@
                                 }
                             }
                             img{
+                                width: 20px;
                                 filter: invert(96%) sepia(0%) saturate(2%) hue-rotate(315deg) brightness(110%) contrast(100%);
                             }
                         }
