--- a/public/style/style.css
+++ b/public/style/style.css
@@ -2,6 +2,7 @@
 :root {
   --white: #fff;
   --purple: #4e00ca;
+  --black: #000;
 }
 
 body {
@@ -417,7 +418,6 @@ header .header_img .img img {
   .menu {
     position: fixed;
     width: 93%;
-    padding: 3px 0;
     border-radius: 5px;
     opacity: 1;
     -webkit-animation: none;
@@ -428,8 +428,11 @@ header .header_img .img img {
     left: 0;
     margin-left: auto;
     margin-right: auto;
+    padding: 13px 0 0 0;
     -webkit-animation: mob-menu-open 1s 0s forwards;
             animation: mob-menu-open 1s 0s forwards;
+    -webkit-box-shadow: 0px 0px 23px -1px rgba(0, 0, 0, 0.4);
+            box-shadow: 0px 0px 23px -1px rgba(0, 0, 0, 0.4);
   }
   @-webkit-keyframes mob-menu-open {
     0% {
@@ -498,6 +501,7 @@ header .header_img .img img {
     }
   }
   .menu .container ul li.active a img {
+    width: 20px;
     -webkit-filter: invert(96%) sepia(0%) saturate(2%) hue-rotate(315deg) brightness(110%) contrast(100%);
             filter: invert(96%) sepia(0%) saturate(2%) hue-rotate(315deg) brightness(110%) contrast(100%);
   }
@@ -506,6 +510,171 @@ header .header_img .img img {
   }
   .menu .container ul li a img {
     margin-right: 0;
+  }
+}
+
+.MobSecondMenu {
+  display: none;
+}
+
+@media screen and (max-width: 550px) {
+  .MobSecondMenu {
+    display: block;
+    position: fixed;
+    background: var(--white);
+    z-index: 10;
+    width: 45px;
+    height: 45px;
+    border-radius: 50%;
+    overflow: hidden;
+    left: 10px;
+    top: 15px;
+    background-image: url(../../images/icons/mob-second-menu.svg);
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: 35px;
+    background-position: 4% 3.2%;
+    -webkit-transition: 0.3s;
+    transition: 0.3s;
+    opacity: 0;
+    -webkit-animation: opacity-ani 1s 0.2s forwards;
+            animation: opacity-ani 1s 0.2s forwards;
+    -webkit-box-shadow: 0px 0px 23px -1px rgba(0, 0, 0, 0.6);
+            box-shadow: 0px 0px 23px -1px rgba(0, 0, 0, 0.6);
+  }
+  .MobSecondMenu.active {
+    width: 400px;
+    height: 400px;
+    left: -40%;
+    top: -15%;
+  }
+  .MobSecondMenu_links {
+    width: 200px;
+    position: absolute;
+    right: 0;
+    top: 35%;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+  .MobSecondMenu_links li {
+    list-style: none;
+    margin-bottom: 1px;
+    padding: 3px 0;
+    font-weight: 600;
+    border-bottom: 1px solid var(--black);
+  }
+  .MobSecondMenu_links li.active {
+    border-color: var(--purple);
+  }
+  .MobSecondMenu_links li.active a {
+    color: var(--purple);
+  }
+  .MobSecondMenu_links li a {
+    color: var(--black);
+    text-decoration: none;
+    font-size: 15px;
+  }
+  .MobSecondMenu_links ul {
+    margin-left: -20px;
+  }
+  .MobSecondMenu_links ul li:last-child {
+    border: none;
+  }
+}
+
+.about {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.about_desktop {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 100px 0;
+  background: url(../././../images/background/background.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+}
+
+.about_desktop .block {
+  width: 300px;
+  text-align: center;
+  line-height: 25px;
+}
+
+.about_desktop .block .block-text {
+  margin-top: 20px;
+}
+
+.about_desktop .block hr {
+  width: 150px;
+  margin: 15px auto 10px auto;
+}
+
+.about_desktop .block p {
+  font-size: 16px;
+}
+
+.about_desktop .block img {
+  width: 290px;
+}
+
+.about_desktop .block b {
+  color: var(--purple);
+  font-weight: 600;
+}
+
+.about_desktop .block h2 {
+  font-size: 25px;
+}
+
+.about_desktop .block-2 img {
+  width: 330px;
+}
+
+.about_desktop .block-1 {
+  margin-top: 250px;
+}
+
+.about_mobile {
+  display: none;
+}
+
+@media screen and (max-width: 550px) {
+  .about_desktop {
+    display: none;
+  }
+  .about_mobile {
+    width: 450px;
+    height: 400px;
+    display: block;
+    margin: 0 auto;
+    padding: 70px 0 20px;
+    margin-bottom: 0;
+  }
+  .about_mobile .block {
+    width: 300px;
+    margin: 0 auto;
+    height: 350px;
+  }
+  .about_mobile .block-text {
+    margin-top: 20px;
+  }
+  .about_mobile .block-text p {
+    font-size: 14px;
+  }
+  .about_mobile .block-text img {
+    width: 250px;
+  }
+  .about_mobile .block-text h2 {
+    font-size: 23px;
+  }
+  .about_mobile .block-2 img {
+    width: 300px;
   }
 }
 /*# sourceMappingURL=style.css.map */
